# Cross-Muse

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  QUICKSTART.md  README.md  opencode.json  pyproject.toml
.codex/agents/: xmuse-reviewer.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: xmuse-ci.yml
.opencode/agents/: adversarial-reviewer.md  coder.md  orchestrator.md  planner.md  swarm-coordinator.md
.opencode/skills/orchestrated-execution/: SKILL.md
.opencode/skills/plan-review-gate/: SKILL.md
.opencode/skills/start/: SKILL.md
docs/releases/: v0.3.1.md  v0.4.0.md
docs/superpowers/plans/: 2026-06-04-groupchat-initialization-ux.md
docs/superpowers/specs/: 2026-06-04-groupchat-initialization-ux-design.md  2026-06-26-natural-groupchat-a2a-production-goal-design.md  2026-06-30-natural-groupchat-kernel-design.md
docs/xmuse/: README.md  acceptance-gated-live-capture-evidence-2026-06-21.md  acceptance-gated-runner-evidence-2026-06-21.md  acceptance-spine.md  anti-tdd-abuse-policy.md  architecture-dependency-report.md  broad-suite-baseline-debt.md  code-quality-and-archive-policy.md  code-review.md  codex-strengthening-handoff.md  config-matrix.md  contract-smoke-gates.md  current-baseline-2026-06-21.md  current-worktree-slice-inventory.md  deep-research-03-next-goal.md  deep-research-conversion-roadmap.md  deep-research-report_x4.md  dependency-first-closure-goal-prompt.md  development-goal-worker-delegation-policy.md  document-status.md  fullchain-runtime-findings-2026-06-17.md  fullchain-runtime-operation-record-2026-06-17.md  github-git-behavior-policy.md  github-review-merge-contract.md  github-server-side-gate-live-evidence-2026-06-21.md  github-server-side-gate-live-evidence-2026-06-25.md  github-server-side-gate.md  goal-behavior-contract.md  goal-copilot-behavior-policy.md  goal-stage-harness.md  legacy-architecture-debt-audit.md  mainline-contracts.md  mainline-test-quarantine.md  mcp-permission-model.md  memoryos-file-separation.md  memoryos-governance-contract.md  memoryos-lite-runtime-compatibility.md  natural-groupchat-a2a-behavior.md  natural-groupchat-a2a-goal-prompt.md  natural-groupchat-a2a-goal.md  (+66 more)
docs/xmuse/archive/: 2026-06-rung-sentinel-artifacts.md
docs/xmuse/frontend/: FRONTEND_API.md  FRONTEND_API_INCREMENTAL.md  FRONTEND_CONTEXT.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_VISION.md
docs/xmuse/session-prompts/: README.md  S0-integration-contract.md  S1-chat-tui-read-layer.md  S2-coordinator-core.md  S3-blueprint-decomposition.md  S4-lane-graph-generation.md  S5-execution-scheduling.md  S6-cli-subagent-skills.md  S7-dashboard-drilldown.md  S8-ray-langgraph-adapters.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: room-first-real.spec.ts  room-first.spec.ts  room-soak-real.spec.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: agent-console.test.tsx  (+32 more)
scripts/: build_install_bundle.py  build_setup_zipapp.py  demo_fake_groupchat.py  export_xmuse.py  github_server_truth_capture.py  goal_stage_runner.py  room_execution_profile_acceptance.py  room_execution_repository_matrix.py  room_first_real_acceptance.py  room_memory_diversity_dogfood.py  room_memory_recall_dogfood.py  room_soak_chaos.py  run_fullchain_docs_sentinel.py
scripts/fixtures/: clowder-docs-88c5836.patch  memoryos-python-uv-7e85e85.patch  memoryos-python-uv-da17322d.patch  memu-python-uv-707b80e.patch  twg-node-pnpm-59e0184.patch
src/xmuse_core/: mcp_responses.py  namespaces.py  observability.py
tests/xmuse/: closure_test_fixtures.py  conftest.py  execution_store_testkit.py  room_fixtures.py  test_a2a_agent_card_contract.py  test_a2a_inbound_chat_inbox.py  test_a2a_provider_client.py  test_a2a_sdk_boundary.py  test_a2a_writeback_reconciler.py  test_acceptance_spine.py  test_architecture_boundaries.py  test_architecture_dependency_report.py  test_auto_discovery.py  test_autotakeover_classifier.py  test_blueprint_execution_service.py  test_blueprint_lane_dag_service.py  test_bounded_deliberation_artifacts.py  test_chat_api.py  test_chat_api_agent_streams.py  test_chat_api_bootstrap.py  test_chat_api_codex.py  test_chat_api_executions.py  test_chat_api_managed_runtime.py  test_chat_api_memory.py  test_chat_api_models_module.py  test_chat_api_operations.py  test_chat_api_runtime_lock.py  test_chat_api_surface.py  test_chat_blueprint_revision.py  test_chat_bootstrap.py  test_chat_bootstrap_api.py  test_chat_default_intake.py  test_chat_driver.py  test_chat_envelopes.py  test_chat_health_cards.py  test_chat_lane_scope.py  test_chat_participant_store.py  test_chat_review_trigger.py  test_chat_store.py  test_chat_streams.py  (+421 more)
xmuse/: CODEX_GOAL_HANDOFF.md  FRONTEND_API.md  FRONTEND_API_INCREMENTAL.md  FRONTEND_CONTEXT.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_VISION.md  HANDOFF.md  architecture_dependency_report.py  auto_discovery.py  chat_api.py  chat_api_agent_streams.py  chat_api_bootstrap.py  chat_api_codex.py  chat_api_execution_runtime.py  chat_api_executions.py  chat_api_foundation.py  chat_api_memory.py  chat_api_operations.py  chat_api_room_controls.py  chat_api_room_messages.py  chat_api_room_projection.py  chat_api_room_setup.py  chat_api_runtime.py  codex_node_launcher.sh  dashboard_api.py  data_authority.py  data_backup.py  data_cli.py  data_compact.py  data_contracts.py  data_doctor.py  data_inspection.py  data_mutation.py  data_restore.py  data_runtime_guard.py  deliberation_transcript_evidence_capture.py  error_knowledge.py  evidence_summary.py  feature_lineage_evidence_capture.py  feature_owner_contract_export.py  (+65 more)
xmuse/god_prompts/: execution_god.md  review_god.md
xmuse/scripts/: inject_frontend_vision_proposal.py  inject_frontend_vision_v2.py
xmuse/skills/: cli_worker_goal_contract.py  plan_execute_review.py
xmuse/tui/: __init__.py  __main__.py  app.py  clipboard.py  completion.py  slash_commands.py  state.py  terminal_demo.py
(+632 files in other folders)
