[project]
name = "xmuse"
version = "0.1.0"
description = "Multi-agent software delivery platform for chat-driven GOD orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.10",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "ray[default]>=2.55.1",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
xmuse-chat-api = "xmuse.chat_api:main"
xmuse-deliberation-transcript-evidence-capture = "xmuse.deliberation_transcript_evidence_capture:main"
xmuse-feature-lineage-evidence-capture = "xmuse.feature_lineage_evidence_capture:main"
xmuse-feature-owner-contract-export = "xmuse.feature_owner_contract_export:main"
xmuse-frozen-blueprint-export = "xmuse.frozen_blueprint_export:main"
xmuse-frozen-blueprint-evidence-capture = "xmuse.frozen_blueprint_evidence_capture:main"
xmuse-goal-stage-evidence-capture = "xmuse.goal_stage_evidence_capture:main"
xmuse-god-session-heartbeat = "xmuse.god_session_heartbeat:main"
xmuse-god-runtime-continuity-capture = "xmuse.god_runtime_continuity_capture:main"
xmuse-internal-review-gate-capture = "xmuse.internal_review_gate_capture:main"
xmuse-memoryos-live-gate-capture = "xmuse.memoryos_live_gate_capture:main"
xmuse-memoryos-live-trace-capture = "xmuse.memoryos_live_trace_capture:main"
xmuse-memoryos-governance-evidence-capture = "xmuse.memoryos_governance_evidence_capture:main"
xmuse-mcp-server = "xmuse.mcp_server:main"
xmuse-live-gate-status-capture = "xmuse.live_gate_status_capture:main"
xmuse-natural-deliberation-gate-capture = "xmuse.natural_deliberation_gate_capture:main"
xmuse-natural-deliberation-transcript-capture = "xmuse.natural_deliberation_transcript_capture:main"
xmuse-operator-action = "xmuse.operator_action_cli:main"
xmuse-overnight-supervisor = "xmuse.overnight_operator_supervisor:main"
xmuse-overnight-replay-bundle-capture = "xmuse.overnight_replay_bundle_capture:main"
xmuse-overnight-supervisor-evidence-capture = "xmuse.overnight_supervisor_evidence_capture:main"
xmuse-platform-runner = "xmuse.platform_runner:main"
xmuse-proof-contamination-audit = "xmuse.proof_contamination_audit:main"
xmuse-production-baseline-capture = "xmuse.production_baseline_capture:main"
xmuse-real-provider-runtime-gate-capture = "xmuse.real_provider_runtime_gate_capture:main"
xmuse-real-provider-runtime-soak-capture = "xmuse.real_provider_runtime_soak_capture:main"
xmuse-release-evidence-candidates = "xmuse.release_evidence_candidates:main"
xmuse-release-evidence-pack = "xmuse.release_evidence_pack:main"
xmuse-release-readiness-capture = "xmuse.release_readiness_capture:main"
xmuse-tui = "xmuse.tui.__main__:main"
xmuse-tui-terminal-demo = "xmuse.tui.terminal_demo:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/xmuse/**/*.db",
    "/xmuse/**/*.sqlite3",
    "/xmuse/**/*.jsonl",
    "/xmuse/**/*.lock",
    "/xmuse/*.json",
    "/xmuse/approvals/**",
    "/xmuse/dispatch/**",
    "/xmuse/feature_plans/**",
    "/xmuse/history/**",
    "/xmuse/knowledge/**",
    "/xmuse/lane_graphs/**",
    "/xmuse/legacy/**",
    "/xmuse/logs/**",
    "/xmuse/master/**",
    "/xmuse/read_models/**",
    "/xmuse/reports/**",
    "/xmuse/self_evolution/**",
    "/xmuse/work/**",
]

[tool.hatch.build.targets.wheel]
packages = ["xmuse", "src/xmuse_core"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests/xmuse"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
check_untyped_defs = true
