[project]
name = "xmuse"
version = "0.1.0"
description = "Durable runtime for agent group conversations and software work"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
xmuse-chat-api = "xmuse.chat_api:main"
xmuse-mcp-server = "xmuse.room_mcp_server:main"
xmuse-room-runner = "xmuse.room_runner:main"
xmuse-workroom = "xmuse.workroom:main"
xmuse-data = "xmuse.data_cli:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/xmuse/**/*.db",
    "/xmuse/**/*.sqlite3",
    "/xmuse/**/*.jsonl",
    "/xmuse/**/*.lock",
    "/xmuse/*.json",
    "/xmuse/logs/**",
    "/xmuse/runtime/**",
]

[tool.hatch.build.targets.wheel]
packages = ["xmuse", "src/xmuse_core"]

[dependency-groups]
dev = [
    "httpx2>=2.5,<3",
    "mypy>=1.18.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests/xmuse"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-config --strict-markers"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
disallow_untyped_defs = true
